--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="后台管理系统">
 <link rel="shortcut icon" href="assets/images/favicon_1.ico">
-<title>后台管理系统</title>
+<title>{% block title %}后台管理系统{% endblock %}</title>
 <!--Morris Chart CSS -->
 <link rel="stylesheet" href="{{ url_for('static',filename='admin/plugins/morris/morris.css')}}">
 <link href="{{ url_for('static',filename='admin/css/bootstrap.min.css')}} " rel="stylesheet" type="text/css" />
@@ -19,8 +18,14 @@
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 <![endif]-->
 <script src="{{ url_for('static',filename='admin/js/modernizr.min.js')}}"></script>
+
+{% block head %}
+
+{% endblock %}
 </head>
-<body class="fixed-left">
+<body{% block body_class %} class="fixed-left"{% endblock %}>
+
+{% block wrapper %}
 <!-- Begin page -->
 <div id="wrapper">
   <!-- Top Bar Start -->
@@ -173,10 +178,13 @@
   <!-- ============================================================== -->
 
 </div>
+{% endblock %}
 <!-- END wrapper -->
 <script>
     var resizefunc = [];
 </script>
+
+{% block script %}
 <!-- jQuery  -->
 <script src="{{ url_for('static',filename='admin/js/jquery.min.js')}}"></script>
 <script src="{{ url_for('static',filename='admin/js/bootstrap.min.js')}}"></script>
@@ -184,6 +192,7 @@
 <script src="{{ url_for('static',filename='admin/js/fastclick.js')}}"></script>
 <script src="{{ url_for('static',filename='admin/js/jquery.slimscroll.js')}}"></script>
 <script src="{{ url_for('static',filename='admin/js/jquery.blockUI.js')}}"></script>
+<script src="{{ url_for('static',filename='admin/js/wow.min.js')}}"></script>
 <!-- <script src="{{ url_for('static',filename='admin/js/waves.js')}}"></script> -->
 <script src="{{ url_for('static',filename='admin/js/jquery.nicescroll.js')}}"></script>
 <!-- jQuery  -->
@@ -195,7 +204,7 @@
 <!-- <script src="{{ url_for('static',filename='admin/pages/jquery.dashboard.js')}}"></script> -->
 <script src="{{ url_for('static',filename='admin/js/jquery.core.js')}}"></script>
 <script src="{{ url_for('static',filename='admin/js/jquery.app.js')}}"></script>
-
+{% endblock %}
 
 </body>
 </html>
