--- a/app/static/admin/css/core.css
+++ b/app/static/admin/css/core.css
@@ -10,11 +10,13 @@ body {
   margin: 0;
   overflow-x: hidden;
   color: #797979;
+  height: 100%;
 }
 html {
   position: relative;
   min-height: 100%;
   background: #ebeff2;
+  height: 100%;
 }
 h1,
 h2,
@@ -1203,7 +1205,8 @@ body.fixed-left .side-menu.left {
 }
 .content-page {
   margin-left: 240px;
-  overflow: hidden;
+  height: 100%;
+  min-height: auto;
 }
 .content-page > .content {
   margin-bottom: 60px;
