--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -13,6 +13,8 @@
 <link href="{{ url_for('static',filename='admin/css/icons.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ url_for('static',filename='admin/css/pages.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ url_for('static',filename='admin/css/responsive.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ url_for('static',filename='admin/css/style.min.css')}}" rel="stylesheet" type="text/css" />
+
 <!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
@@ -133,11 +135,11 @@
         <ul>
           <li class="text-muted menu-title">基础导航</li>
             {% for menu in menus %}
-              <li {% if menu.child %}class="has_sub"{% endif %}> <a href="{% if menu.method %}{{('admin/'~menu.method)}}{% else %}javascript:void(0);{% endif %}" class="waves-effect"><i class="{{ menu.icon }}"></i> <span> {{ menu.name }} </span> </a>
+              <li {% if menu.child %}class="has_sub"{% endif %}> <a class="J_menuItem" href="{% if menu.method %}{{('admin/'~menu.method)}}{% else %}javascript:void(0);{% endif %}" class="waves-effect"><i class="{{ menu.icon }}"></i> <span> {{ menu.name }} </span> </a>
                   {% if menu.child %}
                   <ul class="list-unstyled">
                       {% for m in menu.child %}
-                        <li><a href="{{ m.method }}">{{ m.name }}</a></li>
+                        <li><a class="J_menuItem" href="{{ m.method }}">{{ m.name }}</a></li>
                       {% endfor %}
                   </ul>
                 {% endif %}
@@ -156,7 +158,40 @@
   <!-- Start right Content here -->
   <!-- ============================================================== -->
   <div class="content-page">
-      <!-- ifarme开始 -->
+        <div class="content-tabs">
+                <button class="roll-nav roll-left J_tabLeft"><i class="fa fa-backward"></i>
+                </button>
+                <nav class="page-tabs J_menuTabs">
+                    <div class="page-tabs-content">
+                        <a href="javascript:;" class="active J_menuTab" data-id="index_v1.html">首页</a>
+                    </div>
+                </nav>
+                <button class="roll-nav roll-right J_tabRight"><i class="fa fa-forward"></i>
+                </button>
+                <div class="btn-group roll-nav roll-right">
+                    <button class="dropdown J_tabClose" data-toggle="dropdown">关闭操作<span class="caret"></span>
+
+                    </button>
+                    <ul role="menu" class="dropdown-menu dropdown-menu-right">
+                        <li class="J_tabShowActive"><a>定位当前选项卡</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li class="J_tabCloseAll"><a>关闭全部选项卡</a>
+                        </li>
+                        <li class="J_tabCloseOther"><a>关闭其他选项卡</a>
+                        </li>
+                    </ul>
+                </div>
+        </div>
+
+        <!--右侧部分开始-->
+        <div class="J_mainContent" id="content-main">
+            <iframe class="J_iframe" width="100%" height="100%" src="/dashboard" frameborder="0" data-id="index_v1.html" seamless></iframe>
+        </div>
+        <footer class="footer">
+            2016 © www.divmb.com
+        </footer>
+    <!--右侧部分结束-->
   </div>
   <!-- ============================================================== -->
   <!-- End Right content here -->
@@ -189,6 +224,8 @@
 <!-- <script src="{{ url_for('static',filename='admin/pages/jquery.dashboard.js')}}"></script> -->
 <script src="{{ url_for('static',filename='admin/js/jquery.core.js')}}"></script>
 <script src="{{ url_for('static',filename='admin/js/jquery.app.js')}}"></script>
+<script src="{{ url_for('static',filename='admin/js/metisMenu/jquery.metisMenu.js')}}"></script>
+<script src="{{ url_for('static',filename='admin/js/contabs.min.js')}}"></script>
 {% endblock %}
 
 </body>
