--- a/app/templates/admin/auth_menu.html
+++ b/app/templates/admin/auth_menu.html
@@ -7,11 +7,10 @@
             <!-- Page-Title -->
             <div class="row">
                 <div class="col-sm-12">
-                    <h4 class="page-title">Sellers</h4>
+                    <h4 class="page-title">权限菜单</h4>
                     <ol class="breadcrumb">
-                        <li><a href="#">Ubold</a></li>
-                        <li><a href="#">eCommerce</a></li>
-                        <li class="active">Sellers</li>
+                        <li><a href="#">系统管理</a></li>
+                        <li class="active">权限菜单</li>
                     </ol>
                 </div>
             </div>
@@ -20,14 +19,6 @@
                 <div class="col-lg-12">
                     <div class="card-box">
                         <div class="row">
-                            <div class="col-sm-8">
-                                <form role="form">
-                                    <div class="form-group contact-search m-b-30">
-                                        <input type="text" id="search" class="form-control" placeholder="Search...">
-                                        <button type="submit" class="btn btn-white"><i class="fa fa-search"></i></button>
-                                    </div> <!-- form-group -->
-                                </form>
-                            </div>
                             <div class="col-sm-4">
                                  <a href="#custom-modal" class="btn btn-default btn-md waves-effect waves-light m-b-30" data-animation="fadein" data-plugin="custommodal"
                                                         data-overlaySpeed="200" data-overlayColor="#36404a"><i class="md md-add"></i> Add Seller</a>
